<!--
  ~ Copyright (c) 2022 nosqlbench
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>mvn-defaults</artifactId>
        <groupId>io.nosqlbench</groupId>
        <version>4.17.12-SNAPSHOT</version>
        <relativePath>../mvn-defaults</relativePath>
    </parent>

    <artifactId>driver-jms</artifactId>
    <packaging>jar</packaging>
    <name>${project.artifactId}</name>

    <description>
        A JMS driver for nosqlbench. This provides the ability to inject synthetic data
        into a pulsar system via JMS 2.0 compatibile APIs.

        NOTE: this is JMS compatible driver from DataStax that allows using a Pulsar cluster
        as the potential JMS Destination
    </description>

    <dependencies>
        <!-- core dependencies -->
        <dependency>
            <groupId>io.nosqlbench</groupId>
            <artifactId>engine-api</artifactId>
            <version>4.17.12-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>io.nosqlbench</groupId>
            <artifactId>adapter-stdout</artifactId>
            <version>4.17.12-SNAPSHOT</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <!-- TODO: Remove Lombok from project and use Java Records or other instead -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>compile</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.4</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-configuration2</artifactId>
            <version>2.7</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.datastax.oss/pulsar-jms -->
        <dependency>
            <groupId>com.datastax.oss</groupId>
            <artifactId>pulsar-jms</artifactId>
            <version>1.4.0</version>
        </dependency>

    </dependencies>

    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <debug>true</debug>
                    <target>17</target>
                    <source>17</source>
                    <release>17</release>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <verbose>true</verbose>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.nosqlbench</groupId>
                            <artifactId>nb-annotations</artifactId>
                            <version>${version}</version>
                        </path>
                        <path>
                            <groupId>io.nosqlbench</groupId>
                            <artifactId>virtdata-annotations</artifactId>
                            <version>${version}</version>
                        </path>
                        <path>
                            <groupId>io.nosqlbench</groupId>
                            <artifactId>nb-docsapi</artifactId>
                            <version>${version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.22</version>
                        </path>
                    </annotationProcessorPaths>
                    <!--<compilerArgument>-Xdoclint:all</compilerArgument>-->
                    <!--                    <compilerArgument>-Xlint:all</compilerArgument>-->
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Automatic-Module-Name>io.nosqlbench.driver.jms</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>


        </plugins>
    </build>

</project>
